@@ -120,6 +120,7 @@ javac.classpath=\
     ${file.reference.ant-javafx.jar}:\
     ${file.reference.antlr-2.7.7.jar}:\
     ${file.reference.aparapi.jar}:\
+    ${file.reference.richtextfx-fat-0.6.10.jar}:\
     ${file.reference.appbundler-1.0.jar}:\
     ${file.reference.avalon-framework-4.2.0.jar}:\
     ${file.reference.batik-all-1.7.jar}:\
@@ -192,7 +193,6 @@ javac.classpath=\
     ${file.reference.jackcess-2.1.0.jar}:\
     ${file.reference.nv-i18n-1.15.jar}:\
     ${javafx.classpath.extension}:\
-    ${file.reference.richtextfx-fat-0.6.10.jar}:\
     ${file.reference.gson-2.6.2.jar}:\
     ${file.reference.pdfbox-app-2.0.1.jar}:\
     ${file.reference.poi-3.15-beta2.jar}:\
